# card-pilot-parallel-demo

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 69d1e70c45e9_add_note_to_orders.py  7ed9f18e4bbe_create_line_items.py  88234cb2d8e3_add_unit_price_to_line_items.py  a2d83ba96f76_create_orders_table.py  ceb64dd399b3_merge_migration_heads.py  f6f6ec72f5c4_add_region_to_orders.py
app/: db.py  line_item_repo.py  line_items_api.py  main.py  models.py  ports.py  repository.py
specs/: LOCAL.md  SPEC01-line-items.md
specs/cards/: SPEC01-CARD01-line-items-foundation.md  SPEC01-CARD02-line-item-repository.md  SPEC01-CARD03-line-items-api.md  SPEC01-CARD04-unit-price.md  SPEC01-CARD05-order-note.md
tests/: test_line_item_repo.py  test_line_items_acceptance.py  test_note.py  test_orders_api_acceptance.py  test_orders_model.py  test_region.py  test_repository.py  test_unit_price.py
