[project]
name = "card-pilot-parallel-demo"
version = "0.1.0"
description = "Sandbox for exercising card-pilot's trunk-based parallel flow"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
